# pyqt_sip_example

python_app/: CMakeLists.txt  package.xml  setup.py
python_app/src/: app.py
qt_widgets/: CMakeLists.txt  package.xml  setup.py
qt_widgets/include/qt_widgets/: widget.h
qt_widgets/python/qt_widgets/: __init__.py
qt_widgets/sip/: qt_widgets.sip  widget.sip
qt_widgets/src/: widget.cpp
